[package]
name = "enum_reflect_extern"
version = "0.1.1"
edition = "2024"
authors = ["Hryhorii Kravtsov kravtsov.hryhorii@gmail.com"]
description = "Dependency for enum_reflect."
license = "MIT"
repository = "https://github.com/hrykr/enum-reflect-extern/"
homepage = "https://github.com/hrykr/enum-reflect-extern/"
readme = "README.md"
keywords = ["enum", "reflect", "rust", "field", "derive"]
categories = ["rust-patterns"]

[dependencies]
